Added UserProfile Class
integrated login page added userprofile class started working with xml
added a user profiles folder with a test user profile .xml

--- a/TrackFit/TrackFit Project/TrackFit Project.csproj
+++ b/TrackFit/TrackFit Project/TrackFit Project.csproj
@@ -53,6 +53,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="UserProfile.cs" />
     <Page Include="Login Page.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
@@ -116,6 +117,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="stock profile image.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="User Profiles\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
