--- a/TrackFit/TrackFit Project/TrackFit Project.csproj
+++ b/TrackFit/TrackFit Project/TrackFit Project.csproj
@@ -128,6 +128,9 @@
   <ItemGroup>
     <Resource Include="Sportsbettingspot-Summer-Olympics-Weightlifting.ico" />
   </ItemGroup>
+  <ItemGroup>
+    <Resource Include="KiKi.jpg" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
