added funcitionality for profile photos
accounts now have the ability to add photos

--- a/TrackFit/TrackFit Project/TrackFit Project.csproj
+++ b/TrackFit/TrackFit Project/TrackFit Project.csproj
@@ -39,6 +39,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -128,9 +129,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Resource Include="stock profile image.png" />
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Sportsbettingspot-Summer-Olympics-Weightlifting.ico" />
